Add user authentication with login/signup and user tracking

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <header>
             <h1>Gradia</h1>
             <p class="subtitle">Daily Routine Tracker</p>
+            <div class="user-info">
+                <span id="currentUserDisplay"></span>
+                <button id="logoutBtn" class="logout-btn" style="display: none;">Logout</button>
+            </div>
         </header>
         
         <form id="trackerForm">
