Fix users.csv saving and add sync button for existing users

--- a/tracker.html
+++ b/tracker.html
@@ -81,6 +81,7 @@
             <div id="settingsPanel" class="settings-panel" style="display: none;">
                 <h3>GitHub Configuration</h3>
                 <p class="settings-note">Enter your GitHub details to save data directly to your repository</p>
+                <button id="syncUsersBtn" class="sync-btn" style="margin-top: 10px;">🔄 Sync Users to CSV</button>
                 <div class="input-group">
                     <label for="githubUsername">GitHub Username:</label>
                     <input type="text" id="githubUsername" placeholder="your-username">
