Add date picker for historic data entry

--- a/tracker.html
+++ b/tracker.html
@@ -18,6 +18,12 @@
         </header>
         
         <form id="trackerForm">
+            <div class="date-group">
+                <label for="entryDate">Select Date:</label>
+                <input type="date" id="entryDate" name="entryDate" class="date-input">
+                <button type="button" id="todayBtn" class="today-btn">Today</button>
+            </div>
+            
             <div class="slider-group">
                 <label for="sleep">Sleep Quality</label>
                 <div class="slider-container">
